# quickstart-scraper-hatchet-python

./: .gitignore  LICENSE  README.md  start_all.sh
backend/: README.md  pyproject.toml
backend/src/: config.py
backend/src/api/: main.py
backend/src/workflows/: hatchet.py  main.py  models.py  scraper_workflow.py
frontend/: README.md
frontend/src/app/: app.tsx  page.tsx
